--- a/laravel/.env
+++ b/laravel/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Nolleggiauto
 APP_ENV=local
 APP_KEY=base64:LYgYn7Yc2HOgbMMS9Ns+oS4teYDQecIYYerH2rqup1Y=
 APP_DEBUG=true
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=nolleggiodb
+DB_USERNAME=tweb
+DB_PASSWORD=tweb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -39,7 +39,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_DEFAULT_REGION=eu-west-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
